<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.training</groupId>
	<artifactId>vueblog</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>vueblog</name>
	<description>Blog application using Spring+Vue 3 JS</description>
	<properties>
		<java.version>11</java.version>
		<node.version>v16.3.0</node.version>
		<npm.version>7.15.1</npm.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>javax.persistence-api</artifactId>
			<version>2.2</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security.oauth.boot</groupId>
			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-client</artifactId>
			<version>5.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-jose</artifactId>
			<version>5.5.0</version>
		</dependency>
    <dependency>
      <groupId>org.springframework.session</groupId>
      <artifactId>spring-session-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.session</groupId>
      <artifactId>spring-session-jdbc</artifactId>
    </dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>1.4.200</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-library</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.9.5</version>
    </dependency>

    <dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.12</version>
		</dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-oauth2-client</artifactId>
    </dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.23</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.cloud/spring-cloud-gcp-starter -->
		<dependency>
			<groupId>com.google.cloud</groupId>
			<artifactId>spring-cloud-gcp-starter</artifactId>
			<version>2.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-gcp-starter-storage</artifactId>
			<version>1.2.6.RELEASE</version>
		</dependency>
    <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>2.0.1.Final</version>
    </dependency>




  </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>


<!--			<plugin>-->
<!--				<groupId>com.github.eirslett</groupId>-->
<!--				<artifactId>frontend-maven-plugin</artifactId>-->
<!--				<version>1.7.6</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>Install node and npm</id>-->
<!--						<goals>-->
<!--							<goal>install-node-and-npm</goal>-->
<!--						</goals>-->
<!--						<phase>generate-resources</phase>-->
<!--						<configuration>-->
<!--							<nodeVersion>${node.version}</nodeVersion>-->
<!--							<npmVersion>${npm.version}</npmVersion>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--					<execution>-->
<!--						<id>npm install</id>-->
<!--						<goals>-->
<!--							<goal>npm</goal>-->
<!--						</goals>-->
<!--						<phase>generate-resources</phase>-->
<!--						<configuration>-->
<!--							<arguments>install</arguments>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--					<execution>-->
<!--						<id>npm build</id>-->
<!--						<goals>-->
<!--							<goal>npm</goal>-->
<!--						</goals>-->
<!--						<phase>generate-resources</phase>-->
<!--						<configuration>-->
<!--							<arguments>run build</arguments>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->
<!--				<configuration>-->
<!--					<nodeVersion>${node.version}</nodeVersion>-->
<!--					<workingDirectory>src/frontend</workingDirectory>-->
<!--				</configuration>-->
<!--			</plugin>-->

<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-resources-plugin</artifactId>-->
<!--				<version>3.1.0</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>Copy Vue frontend into Spring Boot target static folder</id>-->
<!--						<phase>process-resources</phase>-->
<!--						<goals>-->
<!--							<goal>copy-resources</goal>-->
<!--						</goals>-->
<!--						<configuration>-->
<!--							<outputDirectory>target/classes/static</outputDirectory>-->
<!--							<resources>-->
<!--								<resource>-->
<!--									<directory>src/frontend/dist</directory>-->
<!--									<filtering>true</filtering>-->
<!--								</resource>-->
<!--							</resources>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
		</plugins>
	</build>

</project>
